[workspace]
members = [
    "bs58-pubkey",
    "nft-events",
    "nft-events/syn",
    "additional-accounts-request",
    "nft-instructions",
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
