[package]
name = "crud-indexing"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crud_indexing"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/ngundotra/anchor", branch = "events", features=["event-cpi"]}
bs58 = "0.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
